# tipi

./: CMakeLists.txt  tipi.c  tipi.h
tests/: test_main.c
